# web-search-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.codex/environments/: environment.toml
docker/: Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml
src/web_search_mcp/: __init__.py  __main__.py  app.py  exceptions.py  server.py
src/web_search_mcp/config/: __init__.py  settings.py
src/web_search_mcp/models/: __init__.py  common.py  scrape.py  search.py
src/web_search_mcp/providers/: __init__.py  base.py  brave.py  duckduckgo.py  google_cse.py  registry.py  serpapi.py  tavily.py
src/web_search_mcp/scrapers/: __init__.py  base.py  crawl4ai_scraper.py  jina_reader.py  trafilatura_scraper.py
src/web_search_mcp/tools/: __init__.py  batch_scrape.py  discover.py  map.py  registration.py  scrape.py  search.py
src/web_search_mcp/utils/: __init__.py  cache.py  content_extractor.py  health.py  markdown.py  rate_limiter.py
tests/: conftest.py
tests/docker/: __init__.py  test_container.py
tests/e2e/: test_http_server.py  test_mcp_server.py
tests/integration/: __init__.py  test_ssl_integration.py
tests/integration/test_providers/: __init__.py  test_brave.py  test_duckduckgo.py  test_google_cse.py  test_registry.py  test_serpapi.py  test_tavily.py
tests/integration/test_scrapers/: __init__.py  test_trafilatura.py
tests/integration/test_tools/: __init__.py  test_tools.py
tests/unit/: test_cache.py  test_cache_integration.py  test_content_extractor.py  test_crawl4ai_scraper.py  test_exceptions.py  test_health.py  test_jina_reader_scraper.py  test_main.py  test_markdown.py  test_models.py  test_provider_base.py  test_providers_additional.py  test_rate_limiter.py  test_server.py  test_settings.py  test_ssl_config.py  test_tool_handlers.py  test_trafilatura_scraper_unit.py
